create a start over function for game

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 			</section>
 			
 			<section id="gemPanel">
-				<div id="gem1"><button type="button" id="button1">Gem 1!</button></div>
-				<div id="gem2"><button type="button" id="button2">Gem 2!</button></div>
-				<div id="gem3"><button type="button" id="button3">Gem 3!</button></div>
-				<div id="gem4"><button type="button" id="button4">Gem 4!</button></div>
+				<div id="gem1HTML"><button type="button" id="button1">Gem 1!</button></div>
+				<div id="gem2HTML"><button type="button" id="button2">Gem 2!</button></div>
+				<div id="gem3HTML"><button type="button" id="button3">Gem 3!</button></div>
+				<div id="gem4HTML"><button type="button" id="button4">Gem 4!</button></div>
 			</section>
 
 			<section id="totalScorePanel">
