game is working. Css styling is greatly needed

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 			</section>
 			
 			<section id="scoring">
-				<div id="randomNumElm">
-				</div>
+				<p id="randomNumElm">
+				</p>
 
 				<div id="winLoss">
-					<div id="winHTML"></div>
-					<div id="lossHTML"></div>
+					<p id="winHTML">Win</p>
+					<p id="lossHTML">Loss</p>
 				</div>
 
 
@@ -61,13 +61,13 @@
 			</section>
 
 			<section id="totalScorePanel">
-				<p>Your total score is:</p>
-				<p id="userScoreElm"></p>
+				<p id="userScoreElm">Your total score is:</p>
+				
 			</section>
 
 		</div>
 
-		<script src="assets/javascript/game.js"></script>
+		<script src="assets/javascript/game2.js"></script>
 
 	</body>
 
