--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 	</head>
 
 	<body>
@@ -42,9 +43,7 @@
 			</section>
 			
 			<section id="scoring">
-				<p id="randomNumElm">
-				</p>
-
+				<p id="randomNumElm"></p>
 				<div id="winLoss">
 					<p id="winHTML">Win</p>
 					<p id="lossHTML">Loss</p>
@@ -54,10 +53,13 @@
 			</section>
 			
 			<section id="gemPanel">
-				<div id="gem1HTML"><button type="button" id="button1">Gem 1!</button></div>
-				<div id="gem2HTML"><button type="button" id="button2">Gem 2!</button></div>
-				<div id="gem3HTML"><button type="button" id="button3">Gem 3!</button></div>
-				<div id="gem4HTML"><button type="button" id="button4">Gem 4!</button></div>
+				<img id="gem1HTML" class="shadowfilter" src="assets/images/gem1.jpg">
+				<img id="gem2HTML" class="shadowfilter" src="assets/images/gem2.jpg">
+				<img id="gem3HTML" class="shadowfilter" src="assets/images/gem3.jpg">
+				<img id="gem4HTML" class="shadowfilter" src="assets/images/gem4.jpg">
+					
+
+				
 			</section>
 
 			<section id="totalScorePanel">
