fix image references

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 			</section>
 			
 			<section id="gemPanel">
-				<img id="gem1HTML" class="shadowfilter" src="assets/images/gem1.jpg">
-				<img id="gem2HTML" class="shadowfilter" src="assets/images/gem2.jpg">
-				<img id="gem3HTML" class="shadowfilter" src="assets/images/gem3.jpg">
-				<img id="gem4HTML" class="shadowfilter" src="assets/images/gem4.jpg">
+				<img id="gem1HTML" class="shadowfilter" src="assets/images/gem1.JPG">
+				<img id="gem2HTML" class="shadowfilter" src="assets/images/gem2.JPG">
+				<img id="gem3HTML" class="shadowfilter" src="assets/images/gem3.JPG">
+				<img id="gem4HTML" class="shadowfilter" src="assets/images/gem4.JPG">
 					
 
 				
